--- a/css/pagina.css
+++ b/css/pagina.css
@@ -39,9 +39,15 @@ h1 {
 }
 
 .tarjeta {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 h2 {
@@ -64,12 +70,21 @@ h3 {
 }
 
 .galeria {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 2%;
   padding: 2%;
-  flex-flow: column nowrap;
-  flex: 1;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .galeria p {
@@ -83,9 +98,16 @@ h3 {
 
 .seccion {
   margin: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 200px;
 }
 
@@ -99,10 +121,16 @@ a {
 
 form {
   background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: column wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
   border: 2px solid black;
-  margin: 15%;
+  margin: 10%;
+  padding: 5%;
 }
 
 .boton {
@@ -121,4 +149,11 @@ p {
   text-align: center;
   font-weight: 500;
 }
-/*# sourceMappingURL=pagina.css.map */
+
+.separador {
+  margin: 5%;
+}
+
+.espacioGaleria {
+  padding: 5%;
+}
