--- a/css/pagina.css
+++ b/css/pagina.css
@@ -5,6 +5,12 @@
   width: 100%;
 }
 
+main p {
+  border-radius: 12px;
+  border: solid #FFA2FF 2px;
+  padding: 5px;
+}
+
 .comienzo {
   display: block;
   padding: 2%;
@@ -34,17 +40,24 @@ h1 {
   text-align: center;
 }
 
+.promocion {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
 .tarjetaTitulo {
-  font-size: 2rem;
+  font-size: 1.7rem;
 }
 
 .tarjeta {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
