--- a/css/pagina.css
+++ b/css/pagina.css
@@ -65,14 +65,14 @@ h1 {
 
 h2 {
   color: #ffa2ff;
-  font-size: 2rem;
+  font-size: 1.9rem;
   text-align: center;
   word-spacing: 20px;
 }
 
 h3 {
   color: #ffa2ff;
-  font-size: 2rem;
+  font-size: 1.8rem;
   text-align: center;
   word-spacing: 20px;
 }
@@ -128,10 +128,6 @@ div i {
   font-size: 2rem;
 }
 
-a {
-  text-decoration: none;
-}
-
 form {
   background-color: white;
   display: -webkit-box;
@@ -155,7 +151,7 @@ p {
   font-size: 1.4rem;
   font-family: 'Crimson Text', serif;
   line-height: 30px;
-  border-radius: 20px;
+  text-align: center;
 }
 
 .footerTexto {
