--- a/scss/pagina.scss
+++ b/scss/pagina.scss
@@ -50,6 +50,12 @@ h1{
     justify-content:space-evenly;
     align-items: center;
 }
+.card-text{
+    height: 540px;
+}
+.separarTarjetas{
+    margin: 10px 0px;
+}
 h2{
     color: #ffa2ff;
     font-size: 1.9rem;
