--- a/css/pagina.css
+++ b/css/pagina.css
@@ -66,8 +66,8 @@ h1 {
           align-items: center;
 }
 
-.card-text {
-  height: 540px;
+.textoDeLasTarjetas {
+  height: 5550px;
   font-size: 1.3rem;
 }
 
