--- a/scss/pagina.scss
+++ b/scss/pagina.scss
@@ -50,8 +50,8 @@ h1{
     justify-content:space-evenly;
     align-items: center;
 }
-.card-text{
-    height: 540px;
+.textoDeLasTarjetas{
+    height: 5550px;
     font-size: 1.3rem;
 }
 .separarTarjetas{
