--- a/css/pagina.css
+++ b/css/pagina.css
@@ -68,7 +68,13 @@ h1 {
 
 .textoDeLasTarjetas {
   height: 500px;
-  font-size: 1.2rem;
+  font-size: 1.6rem;
+}
+
+@media (max-width: 1000px) {
+  .textoDeLasTarjetas {
+    font-size: 1.2rem;
+  }
 }
 
 .separarTarjetas {
